[package]
name = "todo-leptos-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.6", features = ["csr"] }
# log = "0.4"
# console_log = { version = "1", features = ["color"] }
